@@ -297,14 +297,19 @@ tel|2
     }
 
     # OOM score adjustment under Linux: postmaster gets bigger shields for >=
-    # 9.0, but client backends stay at default
+    # 9.0, but client backends stay at default; this might not work in
+    # containers with restricted privileges, so skip the check there
     my $adj;
+    my $detect_virt = system 'systemd-detect-virt --container --quiet';
     open F, "/proc/$master_pid/oom_score_adj";
     $adj = <F>;
     chomp $adj;
     close F;
     if ($v >= '9.0' and not $PgCommon::rpm) {
-        cmp_ok $adj, '<=', -500, 'postgres master has OOM killer protection';
+        SKIP: {
+            skip 'skipping postmaster OOM killer adjustment in container', 1 if $detect_virt == 0;
+            cmp_ok $adj, '<=', -500, 'postgres master has OOM killer protection';
+        }
     } else {
         is $adj, 0, 'postgres master has no OOM adjustment';
     }
